Make figs textwidth

--- a/docs/background.tex
+++ b/docs/background.tex
@@ -6,11 +6,11 @@
 \subsection{A Comparison of Methods for Screening Strain Fitness }
 
 
-% \begin{figure*}
-%   \centering
-%   \includegraphics[width=\linewidth]{5658435523_c2e43729f1_b}
-%   \captionof{figure}{An example QFA agar.}
-% \end{figure*}
+% \begin{figure}
+%    \centering
+%    \includegraphics[width=\linewidth]{5658435523_c2e43729f1_b}
+%    \captionof{figure}{An example QFA agar.}
+% \end{figure}
 
 \begin{Figure}
   \centering
@@ -20,7 +20,11 @@
     https://github.com/CnrLwlss/Colonyzer \citep{Lawless2010}}
 \end{Figure}
 
+Some lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figures.
+Some lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figures.
 
+\end{multicols}
+\graphicspath{{images_low_res/}}
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{qfa_growth_array}
@@ -28,7 +32,10 @@
     Colonyzer \citep{Lawless2010}, of 308 cultures in a QFA
     procedure. Reproduced ??with permission?? from \citet{Banks2012}.}
 \end{Figure}
+\begin{multicols}{2}
 
+\end{multicols}
+\graphicspath{{images_low_res/}}
 \begin{Figure}
   \centering
   \includegraphics[width=\linewidth]{pin_v_spot_growth}
@@ -40,9 +47,9 @@
     pinned cultures corresponding to the data in A) \& B). Reproduced
     ??with permission?? from \citet{Lawless2010}.}
 \end{Figure}
-
-
+\begin{multicols}{2}
 \subsection{Evidence of Competition and Signalling in QFA}
+Some lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figuresSome lines of test about the figures.
 
 \subsection{Modelling Approaches}
 
@@ -52,6 +59,16 @@
 \subsubsection{Hierarchical models and Bayesian inference}
 
 \subsection{Inference of Genetic Interactions / Telomere Cap Defects}
+(Move to background section.
+Motivated by the link between telomere shortening, ageing, and cancer
+(refs?), \citet{Addinall2011} study the genetic interactions of
+\textit{cdc13} which functions in telomere capping in the model
+organism \textit{Saccharomyces cerevisiae}. If the power to predict
+genetic interactions is improved in the reanalysis of data from
+\citet{Addinall2011}, this may highlight new genes involved in these
+processes and will also be relevant for investigations of other types
+of genetic interaction and investigations using other types of
+microbial organism.)
 
 
 %%% Local Variables:
