--- a/docs/aims.tex
+++ b/docs/aims.tex
@@ -22,31 +22,30 @@ identical mutant strains at different locations. In order to learn
 more about the sources of systematic variation in both QFA and SGA
 experiments, and to develop analyses and experimental designs for
 dealing with them, this project aims to account for competition and
-signalling mechanistically. We will study unpublished QFA and SGA data
-for the model organism \textit{Saccharomyces cerevisiae}, also studied
-by \citet{Addinall2008,Addinall2011} and \citet{Baryshnikova2010}.  We
-aim to package all models and analysis tools so that they may be used
-in future QFA and SGA studies or to reanalyse data from past
-studies. We also aim to determine what effect accounting for
-competition and signalling will have on measures of genetic
-interaction strength.
-
-
+signalling mechanistically. We then aim to determine what effect
+accounting for competition and signalling has on measures of
+fitness. We will study unpublished QFA and SGA data for the model
+organism \textit{Saccharomyces cerevisiae}. We will package all models
+and analysis tools so that they may be used in future QFA and SGA
+studies or to reanalyse data from past studies.
 
 \subsection{Hypotheses}
 This project aims to determine whether
 the following hypotheses are correct:
 \begin{itemize}
-\item Nutrient and/or signal molecules diffuse through agar at a rate
-  sufficient to induce competition between adjacent cultures.
-  % Growth of cultures in QFA and SGA experiments is affected by competition for nutrients and/or signalling.
+\item %Nutrient and/or signal molecules diffuse through agar at a rate
+  %sufficient to induce competition between adjacent cultures.
+  Growth of cultures in QFA and SGA experiments is affected by
+  competition for nutrients and/or signalling.
 \item By accounting mechanistically for competition effects, it will
   be possible to design analyses and experiments which minimise them.
-\item Accounting for competition effects will improve the power to
-  infer genetic interactions in genome wide screens.
+\item Accounting for competition effects will/may improve the power to
+  infer genetic interactions.
+
+  ??Are we directly measuring the size of this effect or just saying
+  that if fitness measures are affected then this will have some
+  effect on genetic interaction measures??
 \end{itemize}
-
-
 
 %%% Local Variables:
 %%% mode: latex
