--- a/docs/preamble.tex
+++ b/docs/preamble.tex
@@ -3,6 +3,8 @@
 % Load all necessary packages
 \RequirePackage{inputenc,crop,graphicx,amsmath,array,color,amssymb,flushend,stfloats,amsthm,chngpage,times,hyperref}
 \RequirePackage[LY1]{fontenc}
+\usepackage{amssymb,amsmath}
+
 
 
 \usepackage{geometry}
