SciPy and libSBML

--- a/docs/proposal.bib
+++ b/docs/proposal.bib
@@ -151,6 +151,36 @@ url={http://search.proquest.com/docview/815144256?accountid=12753},
 }
 }
 
+@article{Bornstein2008,
+author = {Bornstein, Benjamin J. and Keating, Sarah M. and Jouraku, Akiya and Hucka, Michael},
+title = {LibSBML: an API Library for SBML},
+volume = 24,
+number = 6,
+pages = {880-881},
+year = 2008,
+doi = {10.1093/bioinformatics/btn051},
+abstract = {Summary: LibSBML is an application programming interface
+                  library for reading, writing, manipulating and
+                  validating content expressed in the Systems Biology
+                  Markup Language (SBML) format. It is written in ISO
+                  C and C++, provides language bindings for Common
+                  Lisp, Java, Python, Perl, MATLAB and Octave, and
+                  includes many features that facilitate adoption and
+                  use of both SBML and the library. Developers can
+                  embed libSBML in their applications, saving
+                  themselves the work of implementing their own SBML
+                  parsing, manipulation and validation
+                  software.Availability: LibSBML 3 was released in
+                  August 2007. Source code, binaries and documentation
+                  are freely available under LGPL open-source terms
+                  from http://sbml.org/software/libsbml.Contact:
+                  sbml-team@caltech.edu},
+URL = {http://bioinformatics.oxfordjournals.org/content/24/6/880.abstract},
+eprint = {http://bioinformatics.oxfordjournals.org/content/24/6/880.full.pdf+html},
+journal = {Bioinformatics}
+}
+
+
 @article {Heydari2016,
 author = {Heydari, Jonathan and Lawless, Conor and Lydall, David A. and Wilkinson, Darren J.},
 title = {Bayesian hierarchical modelling for inferring genetic interactions in yeast},
@@ -211,4 +241,12 @@ title = {{Colonyzer: automated quantification of micro-organism growth character
 url = {http://dx.doi.org/10.1186/1471-2105-11-287},
 volume = 11,
 year = 2010
+}
+
+@Misc{SciPy,
+  author =    {Eric Jones and Travis Oliphant and Pearu Peterson and others},
+  title =     {{SciPy}: Open source scientific tools for {Python}},
+  year =      {2001--},
+  url = "http://www.scipy.org/",
+  note = {[Online; accessed 2016-04-08]}
 }
